--- a/pom.xml
+++ b/pom.xml
@@ -83,15 +83,14 @@
 		<dependency>
 			<groupId>org.spockframework</groupId>
 			<artifactId>spock-core</artifactId>
-			<version>2.4-M1-groovy-4.0</version>
+			<version>2.3-groovy-3.0</version>
 			<scope>test</scope>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.apache.groovy/groovy-all -->
+		<!-- https://mvnrepository.com/artifact/org.codehaus.groovy/groovy-all -->
 		<dependency>
-			<groupId>org.apache.groovy</groupId>
+			<groupId>org.codehaus.groovy</groupId>
 			<artifactId>groovy-all</artifactId>
-			<version>4.0.15</version>
-			<type>pom</type>
+			<version>2.4.21</version>
 		</dependency>
 
 	</dependencies>
