BCI-CHALLENGE - Migrated proyect to Gradle

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 HELP.md
 target/
-!.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
 
@@ -18,6 +17,10 @@ target/
 *.iws
 *.iml
 *.ipr
+
+#Gradle
+.gradle/
+build/
 
 ### NetBeans ###
 /nbproject/private/
