--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,9 @@ repositories {
     mavenCentral()
 }
 
+test {
+    useJUnitPlatform()
+}
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
